Cambio el SeasonListVC para que cuando se presione en el AccessoryButton de una celda de la tabla, se muestre el SeasonDetailVC correspondiente a la temporada, de forma Modal

--- a/Westeros/Controller/SeasonDetailViewController.xib
+++ b/Westeros/Controller/SeasonDetailViewController.xib
@@ -36,6 +36,14 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tdK-8z-rWh">
+                    <rect key="frame" x="166" y="611" width="79" height="30"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <state key="normal" title="Cerrar"/>
+                    <connections>
+                        <action selector="cerrar:" destination="-1" eventType="touchUpInside" id="Onf-La-6fi"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
